fixed styling issues, editor bubble no longer gets cut off, subtext -z index

--- a/src/components/text-editor/quill.bubble.css
+++ b/src/components/text-editor/quill.bubble.css
@@ -8,8 +8,10 @@
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 13px;
-  height: 100%;
-  margin: 0px;
+  height: 270px;
+  width: 310px;
+  margin-left: 2px;
+  margin-top: 2px;
   position: relative;
 }
 .ql-container.ql-disabled .ql-tooltip {
@@ -31,8 +33,8 @@
 }
 .ql-editor {
   box-sizing: border-box;
-  min-height: 270px;
-  width: 312px;
+  height: 270px;
+  width: 310px;
   margin-left: 2px;
   margin-top: 2px;
   line-height: 1.42;
